--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,36 @@
-asgiref             3.8.1
-cffi                1.17.1
-charset-normalizer  3.4.1
-cryptography        44.0.0
-Django              4.2.19
-django-cors-headers 4.6.0
-djangorestframework 3.15.2
-dnspython           2.7.0
-pdfminer.six        20231228
-pdfplumber          0.11.5
-pillow              11.1.0
-pip                 25.0
-pycparser           2.22
-pymongo             4.11
-pypdfium2           4.30.1
-setuptools          58.1.0
-sqlparse            0.5.3
-typing_extensions   4.12.2
-tzdata              2025.1
+asgiref                       3.8.1
+bcrypt                        4.2.1
+cffi                          1.17.1
+charset-normalizer            3.4.1
+click                         8.1.8
+colorama                      0.4.6
+cryptography                  44.0.0
+Django                        4.2.19
+django-cors-headers           4.6.0
+djangorestframework           3.15.2
+djangorestframework_simplejwt 5.4.0
+dnspython                     2.7.0
+joblib                        1.4.2
+nltk                          3.9.1
+numpy                         2.0.2
+pandas                        2.2.3
+pdfminer.six                  20231228
+pdfplumber                    0.11.5
+pillow                        11.1.0
+pip                           25.0
+pycparser                     2.22
+PyJWT                         2.10.1
+pymongo                       4.11
+pypdfium2                     4.30.1
+python-dateutil               2.9.0.post0
+pytz                          2025.1
+regex                         2024.11.6
+scikit-learn                  1.6.1
+scipy                         1.13.1
+setuptools                    58.1.0
+six                           1.17.0
+sqlparse                      0.5.3
+threadpoolctl                 3.5.0
+tqdm                          4.67.1
+typing_extensions             4.12.2
+tzdata                        2025.1
