--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@tailwindcss/vite": "^4.0.3",
     "antd": "^5.23.3",
     "axios": "^1.7.9",
+    "framer-motion": "^12.9.4",
+    "frontend": "file:",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
