--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -43,3 +43,8 @@ tqdm==4.67.1
 python-dateutil==2.9.0.post0
 tzdata==2025.1
 sqlparse==0.5.3
+
+
+# WSGI HTTP Server for Production
+gunicorn==21.2.0
+
