--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
-# Core Django + REST
+# ------------------------------
+# Django & REST Framework
 Django==4.2.19
 djangorestframework==3.15.2
-django-cors-headers==4.6.0
 djangorestframework-simplejwt==5.4.0
-PyJWT==2.10.1
+django-cors-headers==4.6.0
 
 # MongoDB
 pymongo==4.11
@@ -30,7 +30,7 @@ cryptography==44.0.0
 cffi==1.17.1
 pycparser==2.22
 
-# Utility Libraries
+# Utilities
 asgiref==3.8.1
 charset-normalizer==3.4.1
 click==8.1.8
@@ -44,7 +44,5 @@ python-dateutil==2.9.0.post0
 tzdata==2025.1
 sqlparse==0.5.3
 
-
-# WSGI HTTP Server for Production
+# Production WSGI Server
 gunicorn==21.2.0
-
