--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn backend.wsgi:application --bind 0.0.0.0:$PORT --timeout 120 --workers 4
+web: gunicorn backend.wsgi:application --bind 0.0.0.0:$PORT --workers 1 --timeout 120 --max-requests 100 --max-requests-jitter 10
